--- a/public_html/package.json
+++ b/public_html/package.json
@@ -11,5 +11,8 @@
     "url": "\u001b[2~\u001b[2~\u0016"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/jquery": "^3.2.16"
+  }
 }
